# CodeGen

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml
CodeGen/: asgi.py  urls.py  wsgi.py
CodeGen/settings/: base.py  local.py
Docker/local/nginx/: Dockerfile  default.conf
Docker/local/python/: Dockerfile
Docker/local/vue/: Dockerfile
client/: package-lock.json  package.json
client/public/: index.html
client/src/: App.js  App.vue  main.js
client/src/components/: testComponent.js
client/src/components/Bars/: Footer.vue  NavBar.vue
client/src/components/Docker/DockerCompose/: DockerComposeGen.vue
client/src/components/Docker/Dockerfile/: DockerfileGen.vue
client/src/components/DockerComponents/: ComposeInstruction.js  DockerCommand.js
client/src/components/Footer/: Footer.js
client/src/components/Home/: HomePage.vue
client/src/components/NavBar/: NavBar.css  NavBar.js
client/src/components/Nginx/: NginxGen.vue
client/src/components/NginxComponents/: nginxConf.js  nginxInstruction.js
client/src/pages/: DockerComposeGen.js  DockerGen.js  HomePage.js  nginxGen.js
core_apps/dockercomposegen/: admin.py  apps.py  models.py  renderers.py  serializers.py  urls.py  views.py
core_apps/dockercomposegen/migrations/: 0001_initial.py
core_apps/dockerfilegen/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
core_apps/dockerfilegen/migrations/: 0001_initial.py  0002_alter_dockercommand_unique_together.py  0003_alter_dockercommand_options.py
core_apps/nginxgen/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
core_apps/nginxgen/migrations/: 0001_initial.py
core_apps/users/: managers.py
core_apps/users/migrations/: 0001_initial.py
